--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ data/trained_mlp_models/
 data/mlp_projections/
 data/cleaned_historical_data/
 data/compiled_historical_data/
+data/historical_weather/
 data/ba_service_territory/
 data/county_shapefiles/
 data/state_shapefiles/
